[hotfix] Fix minor layout issue in pipeline element overview

--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -94,6 +94,10 @@
   border-top: 1px solid var(--color-bg-3);
 }
 
+.search-field {
+  width: 160px;
+}
+
 .group-outer {
   margin-top: 15px;
   margin-bottom: 10px;
