--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -900,6 +900,7 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
   background: var(--color-bg-1);
   border-bottom: 1px solid var(--color-bg-3);
   padding: 0px;
+  width: 100%;
   /* 	margin-top: 1%;  */
 }
 
